--- a/.github/workflows/stage-deploy.yml
+++ b/.github/workflows/stage-deploy.yml
@@ -1,8 +1,8 @@
-name: DevOps Pipeline CI
+name: Deploy Stage
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: develop
 
 # Environment variables available to all jobs and steps in this workflow
 env:
