--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -22,8 +22,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: yarn --frozen-lockfile
-      run: npx audit-ci -m
+      run: |
+        yarn --frozen-lockfile
+        npx audit-ci -m
 
     - name: Run linters
       run: |
