--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -3,6 +3,7 @@ name: Build and Test
 on:
   pull_request:
     branches: develop
+    types: [assigned, opened, synchronize, reopened]
 
 jobs:
   build:
