--- a/package.json
+++ b/package.json
@@ -52,7 +52,12 @@
     "@welldone-software/why-did-you-render": "^5.0.0",
     "doctoc": "^1.4.0",
     "eslint": "^7.12.1",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "sass-lint": "^1.13.1"
