Updated ncu config

--- a/.ncurc.json
+++ b/.ncurc.json
@@ -2,5 +2,6 @@
     "concurrency": 10,
     "dep": "prod, dev, peer, optional, bundle",
     "errorLevel": 2,
+    "minimal": true,
     "packageManager": "yarn"
 }
