--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Pre-deploy Workflow
 
 on:
   pull_request:
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Run setup
+    - name: Set up pre-requisites
       run: npm install -g npm-check-updates
 
     - name: Run audit and check package versions
@@ -31,8 +31,7 @@ jobs:
         ncu
 
     - name: Install dependencies
-      run: |
-        yarn --frozen-lockfile
+      run: yarn --frozen-lockfile
 
     - name: Run linters
       run: |
