--- a/.github/workflows/stage-deploy.yml
+++ b/.github/workflows/stage-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Stage
+name: Stage Deploy Workflow
 
 on:
   push:
@@ -27,9 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: |
-        yarn --frozen-lockfile
-        npx audit-ci -m
+      run: yarn --frozen-lockfile
 
     - name: Run build
       run: yarn build
