Updated Sonar config

--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -39,12 +39,10 @@ jobs:
         yarn lint
 
     - name: Detect bugs, vulnerabilities and code smells
-      uses: mathrix-education/sonar-scanner@master
-      with:
-        version: 4.5.0.2216
-        typescript: false
-        scan: true
-        args: --debug -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     - name: Run build
       run: yarn build
