--- a/package.json
+++ b/package.json
@@ -3,20 +3,32 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@ibm/plex": "^5.1.3",
+    "carbon-components": "^10.7.4",
+    "carbon-components-react": "^7.7.4",
+    "carbon-icons": "^7.0.7",
     "lodash": "^4.17.15",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "node-sass": "^4.13.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^4.0.0",
     "redux": "^4.0.4",
-    "uuid": "^3.3.3"
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "doctoc": "doctoc ./.github --title '## Table of Contents'",
+    "format": "prettier src/**/*.{js,md,mdx,scss,json} --write",
+    "format:check": "prettier src/**/*.{js,md,mdx,scss,json} --check",
+    "format:diff": "prettier src/**/*.{js,md,mdx,scss,json} --list-different",
+    "lint": "yarn lint:styles && yarn lint:js",
+    "lint:js": "yarn eslint . --ext .js",
+    "lint:styles": "yarn sass-lint 'src/**/*.scss -v -q'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,7 +50,16 @@
     }
   },
   "devDependencies": {
-    "@welldone-software/why-did-you-render": "^3.3.7",
-    "eslint-plugin-react": "^7.16.0"
+    "@welldone-software/why-did-you-render": "^5.0.0",
+    "doctoc": "^1.4.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
+    "sass-lint": "^1.13.1"
   }
 }
