Added Docker and Nginx config for deployment

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "compress": "npx gzipper compress ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "doctoc": "doctoc ./.github --title '## Table of Contents'",
