--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,15 @@
-sonar.projectKey=tvelingkar_react-illustrator-app
+sonar.projectKey=react-illustrator-app
 sonar.organization=tvelingkar
+sonar.host.url=https://dbg-sonarqube.rtp.raleigh.ibm.com
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=react-illustrator-app
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
+sonar.language=js
+sonar.dynamicAnalysis=reuseReports
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-
-sonar.verbose=true
