--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "compress": "npx gzipper compress ./build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "doctoc": "doctoc ./.github --title '## Table of Contents'",
     "format": "prettier src/**/*.{js,md,mdx,scss,json} --write",
@@ -51,6 +51,7 @@
     }
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@welldone-software/why-did-you-render": "^5.0.0",
     "doctoc": "^1.4.0",
     "eslint": "^7.12.1",
@@ -60,7 +61,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.1.2",
-    "sass-lint": "^1.13.1"
+    "sass-lint": "^1.13.1",
+    "ts-jest": "^26.4.4"
   }
 }
