--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "compress": "npx gzipper compress ./build",
-    "test": "jest",
+    "test": "react-scripts test --silent --env=jsdom --coverage --testResultsProcessor jest-sonar-reporter",
     "eject": "react-scripts eject",
     "doctoc": "doctoc ./.github --title '## Table of Contents'",
     "format": "prettier src/**/*.{js,md,mdx,scss,json} --write",
@@ -61,10 +61,14 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.1.2",
-    "sass-lint": "^1.13.1",
-    "ts-jest": "^26.4.4"
+    "react-test-renderer": "^17.0.1",
+    "sass-lint": "^1.13.1"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-report.xml",
+    "indent": 4
   }
 }
