Added SONAR server certificate

--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -5,6 +5,9 @@ on:
     branches: develop
     types: [assigned, opened, synchronize, reopened]
 
+env:
+  SONAR_URL: "https://dbg-sonarqube.rtp.raleigh.ibm.com"
+
 jobs:
   build_test:
     name: Build and Test
@@ -41,7 +44,7 @@ jobs:
     - name: Run Sonar scan
       run: |
         yarn test
-        sudo keytool -import -alias intermediate -file ./node_modules/@commerce-platform/scripts/certs/dbg-sonarqubertpraleighibmcom.crt -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit -noprompt
+        sudo keytool -import -alias intermediate -file ./certs/dbg-sonarqubertpraleighibmcom.crt -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit -noprompt
         curl $SONAR_URL --fail --insecure; if [ $? -eq 0 ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sonar-scanner -Dsonar.host.url=${SONAR_URL} -Djavax.net.ssl.trustStore=$JAVA_HOME/lib/security/cacerts -Djavax.net.ssl.trustStorePassword=changeit; fi
 
     - name: Run Static App Scan
