--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=react-illustrator-app
 sonar.organization=tvelingkar
 sonar.host.url=https://dbg-sonarqube.rtp.raleigh.ibm.com
+sonar.login=e464675f4e994164a9d79c36040b76be5940a071
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=react-illustrator-app
