--- a/.github/workflows/pre-deploy.yml
+++ b/.github/workflows/pre-deploy.yml
@@ -5,9 +5,6 @@ on:
     branches: develop
     types: [assigned, opened, synchronize, reopened]
 
-env:
-  SONAR_URL: "https://dbg-sonarqube.rtp.raleigh.ibm.com"
-
 jobs:
   build_test:
     name: Build and Test
@@ -42,7 +39,9 @@ jobs:
         yarn lint
 
     - name: Run Sonar scan
-      run: yarn test
+      run: |
+        yarn test
+        yarn sonar
 
     - name: Run Static App Scan
       run: sh ./bin/SAST.sh
@@ -64,3 +63,6 @@ jobs:
       run: yarn build
       env:
         CI: true
+
+    - name: Run test
+      run: yarn test
