--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.1.2",
     "react-test-renderer": "^17.0.1",
-    "sass-lint": "^1.13.1"
+    "sass-lint": "^1.13.1",
+    "sonarqube-scanner": "^2.8.0"
   },
   "jestSonar": {
     "reportPath": "reports",
