--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@ibm/plex": "^5.1.3",
-    "carbon-components": "^10.7.4",
-    "carbon-components-react": "^7.7.4",
+    "@ibm/plex": "^5.2.1",
+    "carbon-components": "^10.43.0",
+    "carbon-components-react": "^7.43.0",
     "carbon-icons": "^7.0.7",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.13.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.0",
-    "redux": "^4.0.4",
-    "uuid": "^8.3.1"
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
+    "sass": "^1.41.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,21 +52,21 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@welldone-software/why-did-you-render": "^5.0.0",
-    "doctoc": "^1.4.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.10.0",
+    "@types/jest": "^27.0.1",
+    "@welldone-software/why-did-you-render": "^6.2.1",
+    "doctoc": "^2.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-jest": "^24.4.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest-sonar-reporter": "^2.0.0",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^17.0.1",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
     "sass-lint": "^1.13.1",
-    "sonarqube-scanner": "^2.8.0"
+    "sonarqube-scanner": "^2.8.1"
   },
   "jestSonar": {
     "reportPath": "reports",
